--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -23,9 +23,11 @@ a{
     padding:  0.75rem 0 !important;
     overflow-y: auto;
     white-space: nowrap;
+  
 }
 .msg_card_body{
-    overflow-y: auto;
+    overflow-y: auto; 
+     overflow-x: hidden;
 }
 .card-header{
     border-radius: 15px 15px 0 0 !important;
@@ -172,7 +174,7 @@ cursor: pointer;
 margin-right: 20px;
 }
 .msg_cotainer{
-margin-top: auto;
+margin-top: 20px;
 margin-bottom: auto;
 margin-left: 10px;
 border-radius: 25px;
@@ -180,6 +182,7 @@ background-color: #82ccdd;
 padding: 10px;
 position: relative;
 margin-right: 5px;
+
 }
 .msg_cotainer_send{
 margin-top: auto;
@@ -400,3 +403,28 @@ padding-top:10px ;
     margin: 0 auto;
     display: none;
   }
+
+
+
+  /* reply section*/
+ .het{
+    display: flex;
+    justify-content: space-between;
+ }
+  .het h1{
+    font-size: 17px;
+  }
+
+  .hy{
+    color: white;
+  }
+
+  .reps{
+
+position: relative;
+margin-top: -3%;
+background-color: #86A8E7;
+padding:5px 15px;
+height: fit-content;
+
+}
